Fix Jarring movement when a section container is collapsed
Reviewer: Dan Jao
Issue: GCP-9625

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -1232,6 +1232,10 @@ input::-ms-clear {
     padding-right: 10px;
 }
 
+[ng-multi-transclude-controller] [collapse] {
+    width: 100%;
+}
+
 .reduce-padding {
     padding: 0 6px;
 }
